--- a/work/mybiblio.bib
+++ b/work/mybiblio.bib
@@ -412,3 +412,45 @@
   year = {2019},
   url = {https://github.com/OneAdder/lingtypology_research}
 }
+
+@misc{praat,
+    author = {Boersma, Paul and David Weenink},
+    year = {2019},
+    title = {Praat: doing phonetics by computer [Computer program]. Version 6.0.53.},
+    url = {https://github.com/praat/praat}
+}
+
+@manual{elan,
+    author = "{Nijmegen: Max Planck Institute for Psycholinguistics}",
+    title = {ELAN - Linguistic Annotator},
+    year = {2019},
+    url = {https://www.mpi.nl/corpus/html/elan/index.html}
+}
+
+@article{zen,
+    author = {Tim Peters},
+    title = {The Zen of Python},
+    year = {2004},
+    url = {https://www.python.org/dev/peps/pep-0020/}
+}
+
+@manual{unicode,
+    author = "{Unicode, Inc.}",
+    title = {The Unicode® Standard: A Technical Introduction},
+    year = {2019},
+    url = {https://www.unicode.org/standard/principles.html}
+}
+
+@misc{scipy,
+    author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+    title =     {{SciPy}: Open source scientific tools for {Python}},
+    year =      {2019},
+    url = "http://www.scipy.org/",
+}
+
+@manual{Govnov2019,
+    author = {Michael Voronov},
+    year = {2019},
+    title = {LingTypology},
+    url = {https://oneadder.github.io/lingtypology/}
+}
